@@ -488,7 +488,8 @@ o Graphics subystem (graphics/)
                negative X offsets. Negative x-offsets are necessary for certain
                glyphs (and is very common in italic fonts).
                For example Eth, icircumflex, idieresis, and oslash should have
-               offset=1 in the 40x49b font.
+               offset=1 in the 40x49b font (these missing negative offsets are
+               NOTE'ed in the font header files).
   Status:      Open.  The problem is that the x-offset is an unsigned bitfield
                in the current structure.
   Priority:    Low.
