@@ -59,10 +59,16 @@ CSRCS = up_initialize.c up_idle.c up_interruptcontext.c \
 		  up_releasestack.c  up_unblocktask.c up_blocktask.c \
 		  up_releasepending.c up_reprioritizertr.c \
 		  up_exit.c up_schedulesigaction.c up_allocateheap.c \
-		  up_devconsole.c up_framebuffer.c
+		  up_devconsole.c
 HOSTSRCS = up_stdio.c up_hostusleep.c
+
+ifeq ($(CONFIG_NX_LCDDRIVER),y)
+  CSRCS += up_lcd.c
+else
+  CSRCS += up_framebuffer.c
 ifeq ($(USEX),y)
-  HOSTSRCS +=  up_x11framebuffer.c
+  HOSTSRCS += up_x11framebuffer.c
+endif
 endif
 
 ifeq ($(CONFIG_FS_FAT),y)
