@@ -1972,3 +1972,8 @@
 	  for the LPC1764, LPC1756, and LPC1754 (submitted by Li Zhuoy (Lzzy))
 	* arch/arm/src/lpc17xx/lpc17_can.h:  Revised CAN driver submitted by
 	   Li Zhuoy (Lzzy).  The driver now supports both CAN1 and CAN2.
+	* arch/arm/sim/up_lcd.c: Add a simulated LCD driver.
+	* configs/stm3210e-eval/nxlines:  Added a configuration to build
+	  examples/nxlines.
+	* arch/graphics: Used apps/examples/nxlines to (finally) verify the NX
+	  trapezoid drawing functions and (wide) line drawing functions.
